# ML-and-data-Analytics

./: .gitignore  .replit  an.py  cleaned_netflix_titles.csv  day1.py  day2.py  day4.py  day6.py  day6a.py  hc.py  lab5.py  linreg.py  linreg2.py  logistic.py  main.py  ml_day1.py  multilin.py  netflix.py  newdata.csv  nump.py  nump1.py  prac3.py  prac4.py  project.py  pyproject.toml  test.py  train.py
